Update navbar layout and add overflow styles for better responsiveness && fix horizontal scrolling bug

--- a/app/web/static/css/navbar.css
+++ b/app/web/static/css/navbar.css
@@ -256,3 +256,10 @@
 .uppercase {
 	text-transform: uppercase;
 }
+
+ body,
+ html {
+ 	overflow-x: hidden;
+ 	width: 100%;
+ 	max-width: 100%;
+ }
